<resources>
    <string name="title_activity_settings">Settings</string>
    <string name="view_about_me_to_learn_about_the_developer_of_this_app">View about me to learn about the developer of this app</string>
    <string name="about_me">About Me</string>
    <string name="report_a_bug_to_let_me_know_if_there_are_any_issues_with_the_app_so_i_can_fix_them">Report a bug to let me know if there are any issues with the app so i can fix them.</string>
    <string name="view_my_other_apps_to_see_if_they_will_benefit_you_at_all">View my other apps to see if they will benefit you at all</string>
    <string name="other_apps">Other Apps</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="leave_a_review_to_let_me_know_n_what_you_think_about_the_app">Leave a Review to let me know what you think about the app</string>
    <string name="leave_a_review">Leave a Review</string>
    <string name="clear">Clear</string>
    <string name="calculate">Calculate</string>
    <string name="out">Out</string>
    <string name="break_time_in_minutes">Break Time (In Minutes)</string>
    <string name="enter_time_in_12h_format">Enter Time in 12 Hour Format</string>
    <string name="in">In</string>
    <string name="_9_00" translatable="false">9:00</string>
    <string name="_5_00" translatable="false">5:00</string>
    <string name="_60" translatable="false">60</string>
    <string name="proper_input">Please Enter the Proper Input</string>
    <string name="dont_leave_anything_blank">"Don't leave anything blank!"</string>
    <string name="cant_be_greater_than_or_equal_to_60">Minutes Can Not Be Greater Than Or Equal To 60</string>
    <string name="cant_be_greater_than_or_equal_to_13">Hours can not be greater than or equal to 13</string>
    <string name="in_time_can_not_be_greater_than_out_time">In time can not be greater than out time!</string>
    <string name="about_me_message">I am a 21 year old new android dev, only been developing for about a year, the only way for me to make money off of this since there is not in-app purchases is for you to click on the ads. So if you want to help me out. Please click on the ads.</string>
    <string name="history">History</string>
    <string name="amount_of_hours_saved">"Amount of Hours Saved: %1$d"</string>
    <string name="total_hours_history">"Total Hours: %1$s"</string>
    <string name="total_hours">"Total Hours: %1$s"</string>
    <string name="sort">Sort</string>
    <string name="sort_by_last_entered">Sort By Last Entered</string>
    <string name="sort_by_first_entered">Sort By First Entered</string>
    <string name="sort_by_most_hours">Sort By Most Hours</string>
    <string name="sort_by_least_hours">Sort By Least Hours</string>
    <string name="change_log">Patch Notes</string>
    <string name="most_hours">* Sort By Most Hours</string>
    <string name="least_hours">* Sort By Least Hours</string>
    <string name="last_entered">* Sort By Last Entered</string>
    <string name="first_entered">* Sort By First Entered</string>
    <string name="changed_sort_mode_first_entered">Changed sort mode to show first entered first</string>
    <string name="changed_sort_mode_last_entered">Changed sort mode to show last entered first</string>
    <string name="changed_sort_mode_most_hours">Changed sort mode to show item with most hours first</string>
    <string name="changed_sort_mode_most_hours_last">Changed sort mode to show item with most hours last</string>
    <string name="day_DESC" translatable="false">day DESC</string>
    <string name="total_DESC" translatable="false">total DESC</string>
    <string name="total_ASC" translatable="false">total ASC</string>
    <string name="day_ASC" translatable="false">day ASC</string>
    <string name="click_back_again">Please click BACK again to exit</string>
    <string name="trash">Trash</string>
    <string name="warning_trash_will_automatically_delete_each_hour_when_it_gets_a_week_old">Warning: Trash will automatically delete each hour when it gets a week old</string>
    <string name="amount_of_hours_in_trash">"Amount of Hours in Trash: %1$d"</string>
    <string name="day_trash_DESC" translatable="false">day_trash DESC</string>
    <string name="day_trash_ASC" translatable="false">day_trash ASC</string>
    <string name="total_trash_ASC" translatable="false">total_trash ASC</string>
    <string name="total_trash_DESC" translatable="false">total_trash DESC</string>
    <string name="in_time_adapter">In Time: %1$s</string>
    <string name="out_time_adapter">Out Time: %1$s</string>
    <string name="break_time_adapter">Break Time: %1$s</string>
    <string name="total_time_adapter">Total Time: %1$s</string>
    <string name="date_adapter">Date: %1$s</string>
    <string name="cant_sort_data_trash_empty">Can\'t sort data, trash is empty</string>
    <string name="cant_sort_data_history_empty">Can\'t sort data, hours is empty</string>
    <string name="AdmobLink" translatable="false">https://developers.google.com/admob/android/quick-start</string>
    <string name="materialLink" translatable="false">https://material.io/develop/android/docs/getting-started</string>
    <string name="spinnerLink" translatable="false">https://github.com/jaredrummler/MaterialSpinner</string>
    <string name="PlayCoreLink" translatable="false">https://developer.android.com/guide/playcore</string>
    <string name="CrashlyticsLink" translatable="false">https://firebase.google.com/docs/crashlytics</string>
    <string name="FirebaseLink" translatable="false">https://firebase.google.com/docs/reference</string>
    <string name="PerformanceLink" translatable="false">https://firebase.google.com/docs/perf-mon</string>
    <string name="MPAndroidLink" translatable="false">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="CloudMessagingLink" translatable="false">https://firebase.google.com/docs/cloud-messaging</string>
    <string name="ads_link" translatable="false"><a href="https://developers.google.com/admob/android/quick-start">https://developers.google.com/admob/android/quick-start</a></string>
    <string name="material_link" translatable="false"><a href="https://material.io/develop/android/docs/getting-started">https://material.io/develop/android/docs/getting-started</a></string>
    <string name="spinner_link" translatable="false"><a href="https://github.com/jaredrummler/MaterialSpinner">https://github.com/jaredrummler/MaterialSpinner</a></string>
    <string name="play_core_link" translatable="false"><a href="https://developer.android.com/guide/playcore">https://developer.android.com/guide/playcore</a></string>
    <string name="crashlytics_link" translatable="false"><a href="https://firebase.google.com/docs/crashlytics">https://firebase.google.com/docs/crashlytics</a></string>
    <string name="firebase_link" translatable="false"><a href="https://firebase.google.com/docs/reference">https://firebase.google.com/docs/reference</a></string>
    <string name="performance_link" translatable="false"><a href="https://firebase.google.com/docs/perf-mon">https://firebase.google.com/docs/perf-mon</a></string>
    <string name="tip_calculator_link" translatable="false"><a href="https://play.google.com/store/apps/details?id=com.cory.tipcalc">https://play.google.com/store/apps/details?id=com.cory.tipcalc</a></string>
    <string name="hour_calculator_link" translatable="false"><a href="https://play.google.com/store/apps/details?id=com.cory.hourcalculator">https://play.google.com/store/apps/details?id=com.cory.hourcalculator</a></string>
    <string name="tic_tac_toe_link" translatable="false"><a href="https://play.google.com/store/apps/details?id=com.cory.tictactoe">https://play.google.com/store/apps/details?id=com.cory.tictactoe</a></string>
    <string name="book_finder_link" translatable="false"><a href="https://play.google.com/store/apps/details?id=com.cory.bookfinder">https://play.google.com/store/apps/details?id=com.cory.bookfinder</a></string>
    <string name="bibleify_link" translatable="false"><a href="https://play.google.com/store/apps/details?id=com.cory.bible_ify">https://play.google.com/store/apps/details?id=com.cory.bible_ify</a></string>
    <string name="hour_converter_link" translatable="false"><a href="https://play.google.com/store/apps/details?id=com.cory.timeconverter">https://play.google.com/store/apps/details?id=com.cory.timeconverter</a></string>
    <string name="memorable_places_link" translatable="false"><a href="https://play.google.com/store/apps/details?id=com.cory.memorableplaces">https://play.google.com/store/apps/details?id=com.cory.memorableplaces</a></string>
    <string name="texarkana_college_link" translatable="false"><a href="https://play.google.com/store/apps/details?id=com.cory.texarkanacollege">https://play.google.com/store/apps/details?id=com.cory.texarkanacollege</a></string>
    <string name="chart_link" translatable="false"><a href="https://github.com/PhilJay/MPAndroidChart">https://github.com/PhilJay/MPAndroidChart</a></string>
    <string name="version_info">Version Info</string>
    <string name="this_will_list_the_version_code_and_dependencies_used_in_the_app">This will list the version code and dependencies used in the app.</string>
    <string name="play_core_in_app_review_dependency">Play Core (In App Review Dependency)</string>
    <string name="jared_drummler_material_spinner" translatable="false">Jared Drummler Material Spinner</string>
    <string name="google_play_ads">Google Play Ads</string>
    <string name="material_ui">Material UI</string>
    <string name="dependencies">Dependencies</string>
    <string name="version">Version</string>
    <string name="firebase_crashlytics" translatable="false">Firebase Crashlytics</string>
    <string name="firebase_analytics" translatable="false">Firebase Analytics</string>
    <string name="firebase_performance_monitoring">Firebase Performance Monitoring</string>
    <string name="in_time">In Time</string>
    <string name="out_time">Out Time</string>
    <string name="break_time">Break Time</string>
    <string name="total">Total</string>
    <string name="day">Day</string>
    <string name="bar_chart_item_clicked">"In Time: %1$s\nOut Time: %2$s\nBreak Time: %3$s\nTotal: %4$s\nDay: %5$s"</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum</string>
    <string name="mpandroid_chart" translatable="false">MPAndroid Chart</string>
    <string name="warning_graph_will_only_display_7_entries_max_n_and_it_will_be_the_most_recent_entries">Warning: Graph Will Only Display 7 Entries Max   and It Will Be The Most Recent Entries</string>
    <string name="graph">Graph</string>
    <string name="whats_new">"What's new in version %1$s"</string>
    <string name="version_number" translatable="false">7.1.8</string>
    <string name="memorable_places_logo">Memorable Places Logo</string>
    <string name="texarkana_college_logo">Texarkana College Logo</string>
    <string name="tip_calculator_image">Tip Calculator Image</string>
    <string name="hour_calculator_image">Hour Calculator Image</string>
    <string name="book_finder_image">Book Finder Image</string>
    <string name="bibleify_logo">Bibleify Logo</string>
    <string name="tic_tac_toe_logo">Tic Tac Toe Logo</string>
    <string name="hour_time_converter_logo">Hour Time Converter Logo</string>
    <string name="total_wages">Total Wages for Hours Stored: %1$s</string>
    <string name="share_via">Share via</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="home">Home</string>
    <string name="notification_information">Changing these settings will change the notifications you receive</string>
    <string name="disable_update_notifications">Disable Update Notifications</string>
    <string name="enable_update_notifications">Enable Update Notifications</string>
    <string name="notification_settings">Notification Settings</string>
</resources>