<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_sort_24px"
        android:title="@string/sort"
        android:id="@+id/mnuSort"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/menuSortByLastEntered"
                android:title="@string/sort_by_last_entered" />
            <item
                android:id="@+id/menuSortByFirstEntered"
                android:title="@string/sort_by_first_entered" />
            <item
                android:id="@+id/menuSortByMostHours"
                android:title="@string/sort_by_most_hours" />
            <item
                android:id="@+id/menuSortByLeastHours"
                android:title="@string/sort_by_least_hours" />
        </menu>
    </item>

    <item
        android:id="@+id/home"
        android:title="@string/home" />
    <item
        android:id="@+id/Settings"
        android:title="@string/title_activity_settings" />
    <item
        android:id="@+id/changelog"
        android:title="@string/change_log" />
    <item
        android:id="@+id/history"
        android:title="@string/history" />
    <item
        android:id="@+id/graph"
        android:title="@string/graph" />
</menu>