<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/mnuSort"
        android:icon="@drawable/ic_sort_24px"
        android:title="@string/sort"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/menuSortByLastEntered"
                android:title="@string/sort_by_last_entered" />
            <item
                android:id="@+id/menuSortByFirstEntered"
                android:title="@string/sort_by_first_entered" />
            <item
                android:id="@+id/menuSortByMostHours"
                android:title="@string/sort_by_most_hours" />
            <item
                android:id="@+id/menuSortByLeastHours"
                android:title="@string/sort_by_least_hours" />
        </menu>
    </item>
</menu>