<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintsheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:background="@drawable/sheet_background_rounded">

    <View
        android:id="@+id/view"
        android:layout_width="35sp"
        android:layout_height="6sp"
        android:background="@drawable/rounded_view_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/other_apps"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="4dp"
        android:background="@drawable/tipcalculator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        android:contentDescription="@string/tip_calculator_image"
        android:clickable="true"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:foregroundGravity="center"
        android:text="@string/tip_calculator_link"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hourcalculatorlogo"
        android:contentDescription="@string/hour_calculator_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        android:text="@string/hour_calculator_link"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/tictactoe"
        android:contentDescription="@string/tic_tac_toe_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:foregroundGravity="center"
        android:text="@string/tic_tac_toe_link"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bookfinder"
        android:contentDescription="@string/book_finder_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:foregroundGravity="center"
        android:text="@string/book_finder_link"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView5"
        app:layout_constraintTop_toBottomOf="@id/textView8" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bibleifylogo"
        android:contentDescription="@string/bibleify_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:foregroundGravity="center"
        android:text="@string/bibleify_link"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView6"
        app:layout_constraintTop_toBottomOf="@id/textView9" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hourtimeconverter"
        android:contentDescription="@string/hour_time_converter_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:foregroundGravity="center"
        android:text="@string/hour_converter_link"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView7"
        app:layout_constraintTop_toBottomOf="@id/textView10" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/memorableplaceslogo"
        android:contentDescription="@string/memorable_places_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView7" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:foregroundGravity="center"
        android:text="@string/memorable_places_link"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView8"
        app:layout_constraintTop_toBottomOf="@id/textView11" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/texarkanacollegelogo"
        android:contentDescription="@string/texarkana_college_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView8" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:foregroundGravity="center"
        android:text="@string/texarkana_college_link"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView9"
        app:layout_constraintTop_toBottomOf="@id/textView12" />

</androidx.constraintlayout.widget.ConstraintLayout>