<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ThemeActivity"
    android:background="?attr/backgroundColor"
    android:id="@+id/notificationConstraintLayout">

    <TextView
        android:id="@+id/updateNotificationsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/notification_settings"
        android:textColor="?attr/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/updateNotificationsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updateNotificationsTextView"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RadioGroup
            android:id="@+id/notificationRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/notificationEnabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_update_notifications"
                android:textColor="?attr/textColor"/>

            <RadioButton
                android:id="@+id/disableNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disable_update_notifications"
                android:textColor="?attr/textColor" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_information"
        app:layout_constraintTop_toBottomOf="@id/updateNotificationsCardView"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textColor="?attr/textColor"/>
</androidx.constraintlayout.widget.ConstraintLayout>